# ros2_autonomous_docker

./: .gitignore  CONTRIBUTING.md  Distancia.cpp  Dockerfile  README.md  distancia.py  teleop_motor_node.py  test_motoresFinal.py  train_model.py
Docker/: Dockerfile  entrypoint.sh
docs/: README.md  bash_setup.md
model_ai_calibration/model_ai_calibration/proyecto_calibracion/: train_model.py
model_ai_calibration/model_ai_calibration/rayo mc/: auto_ia.py
model_ai_calibration/proyecto_calibracion/: HC-SR04 Data.csv  arima_model.py  calibracion_ultrasonico_40hz_test.csv  datos_prueba_ia.csv  test_ia_tiempo_real.py  test_model.py  ultrasonic_calibrado.py
model_ai_calibration/rayo mc/: modelo_calibracion.h5  modelo_calibracion.keras  modelo_calibracion_patched.h5  scaler.pkl
model_ai_calibration/rayo_mc/: modelo_calibracion.h5  scaler (1).pkl
ros2_ws/ros2_ws/src/motor_controller/motor_controller/: hola_publisher.py  pruebarayo.py
ros2_ws/src/motor_controller/: package.xml  setup.py
ros2_ws/src/motor_controller/motor_controller/: camera_stream.py  cmd_vel_publisher_node.py  config.py  control_test.py  fuzzy.py  hola_subscriber.py  mjpeg_server.py  motor_controller_node.py  rayows.py  safety_ultrasonic_node.py  teleop_motor_node.py  video_state.py  websocket_bridge.py
