<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for teleoperation and motor control of a 1:16 autonomous vehicle prototype.
  </description>

  <maintainer email="maguillon21@alumnos.uaq.mx">Moises_Aguillon_Cesar_Nuñes_Alejandro_Estrada</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>